# vex

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  OPEN_ISSUES.md  README.md  ROADMAP.md  brute_jcs.py  bump_versions.py  clippy_final_final.txt  clippy_llm.txt  clippy_output.txt  clippy_output_v2.txt  clippy_output_v3.txt  diag_jcs.rs  docker-compose.yml  final_verify.txt  fix_readme.py  railway.json  railway.toml  template.json  test_output.txt  test_request.json  vercel.json
attest/attest-rs/: Cargo.toml  sample_capsule.json
attest/attest-rs/src/: config.rs  error.rs  ffi.rs  lib.rs  main.rs  zk.rs
attest/attest-rs/src/cloud/: adapter.rs  chora.rs  client.rs  mod.rs
attest/attest-rs/src/kernel/: hooks.rs  mod.rs  vm.rs
attest/attest-rs/src/persist/: audit.rs  mod.rs  sqlite.rs
attest/attest-rs/src/runtime/: hashing.rs  intent.rs  interceptor.rs  keystore_provider.rs  mod.rs  network.rs  noise.rs  policy.rs  tpm_parser.rs  tpm_verifier.rs  vep.rs  watcher.rs
attest/attest-rs/tests/: tamper_proof.rs
crates/vex-adversarial/: Cargo.toml  README.md
crates/vex-adversarial/src/: consensus.rs  debate.rs  lib.rs  reflection.rs  shadow.rs
crates/vex-adversarial/tests/: adversarial_tests.rs
crates/vex-algoswitch/: Cargo.toml  README.md  SPEC.md  TODO.md
crates/vex-algoswitch/benches/: benches.rs  cache.rs  pattern.rs  sort.rs
crates/vex-algoswitch/examples/: bench.rs
crates/vex-algoswitch/src/: lib.rs  prelude.rs
crates/vex-algoswitch/tests/: integration.rs
crates/vex-anchor/: Cargo.toml  README.md
crates/vex-anchor/src/: backend.rs  celestia.rs  cloud.rs  error.rs  ethereum.rs  file.rs  git.rs  lib.rs  opentimestamps.rs
crates/vex-api/: Cargo.toml  README.md
crates/vex-api/src/: auth.rs  circuit_breaker.rs  error.rs  lib.rs  middleware.rs  routes.rs  sanitize.rs  server.rs  state.rs  telemetry.rs  tenant_rate_limiter.rs
crates/vex-api/src/a2a/: agent_card.rs  handler.rs  mod.rs  task.rs
crates/vex-api/src/jobs/: agent.rs  mod.rs
crates/vex-api/tests/: circuit_breaker_tests.rs  gatekeeping_tests.rs  integration_tests.rs
crates/vex-chora/: Cargo.toml  README.md
crates/vex-chora/src/: bridge.rs  client.rs  lib.rs
crates/vex-cli/: Cargo.toml  README.md
crates/vex-cli/src/: main.rs
crates/vex-cli/src/commands/: info.rs  inspect.rs  mod.rs  prove.rs  tools.rs  verify.rs
crates/vex-core/: Cargo.toml  README.md
crates/vex-core/benches/: agent_benchmark.rs  merkle_benchmark.rs
crates/vex-core/src/: agent.rs  audit.rs  context.rs  evolution.rs  evolution_memory.rs  fitness.rs  genome_experiment.rs  jcs_fuzz.rs  lib.rs  merkle.rs  rule.rs  segment.rs  vep.rs  zk.rs
crates/vex-core/tests/: chora_parity.rs  singularity_high_fid.rs
crates/vex-hardware/: Cargo.toml  README.md
crates/vex-hardware/src/: api.rs  id.rs  keystore.rs  lib.rs  tpm.rs  traits.rs
crates/vex-llm/: Cargo.toml  README.md
crates/vex-llm/src/: cached_provider.rs  config.rs  deepseek.rs  lib.rs  metrics.rs  mistral.rs  mock.rs  ollama.rs  openai.rs  openai_compat.rs  provider.rs  rate_limit.rs  resilient_provider.rs  streaming_tool.rs  tool.rs  tool_error.rs  tool_executor.rs  tool_result.rs  wasm_tool.rs  wasm_tool_tests.rs
crates/vex-llm/src/mcp/: client.rs  mod.rs  types.rs
crates/vex-llm/src/tools/: calculator.rs  datetime.rs  hash.rs  json_path.rs  mod.rs  regex.rs  uuid_tool.rs
crates/vex-llm/tests/: llm_integration.rs  macro_test.rs
crates/vex-macros/: Cargo.toml  README.md
crates/vex-macros/src/: lib.rs
crates/vex-persist/: Cargo.toml  README.md
crates/vex-persist/migrations/: 20241214000000_initial_schema.sql  20251213000000_create_jobs_table.sql  20251217000000_evolution_schema.sql  20251218000000_multi_tenancy.sql  20260220000000_jobs_result_column.sql  20260220000001_vector_embeddings.sql
crates/vex-persist/postgres_migrations/: 20241214000000_initial_schema.sql  20251213000000_create_jobs_table.sql  20251217000000_evolution_schema.sql  20251218000000_multi_tenancy.sql  20260220000000_jobs_result_column.sql  20260220000001_vector_embeddings.sql  20260312000000_add_metadata_index.sql
crates/vex-persist/src/: agent_store.rs  api_key_store.rs  audit_store.rs  backend.rs  context_store.rs  coordination.rs  evolution_store.rs  lib.rs  postgres.rs  queue.rs  sqlite.rs  vector_store.rs
crates/vex-persist/tests/: evolution_store_test.rs  sqlite_queue.rs
crates/vex-queue/: Cargo.toml  README.md
crates/vex-queue/src/: backend.rs  job.rs  lib.rs  memory.rs  worker.rs
crates/vex-queue/tests/: worker_tests.rs
crates/vex-router/: Cargo.toml  HANDOFF.md  LICENSE  README.md
crates/vex-router/src/: lib.rs  main.rs
crates/vex-router/src/cache/: mod.rs
crates/vex-router/src/classifier/: mod.rs
crates/vex-router/src/compress/: mod.rs
crates/vex-router/src/config/: mod.rs
crates/vex-router/src/gateway/: mod.rs
crates/vex-router/src/guardrails/: mod.rs
crates/vex-router/src/models/: mod.rs
crates/vex-router/src/observability/: mod.rs
crates/vex-router/src/router/: mod.rs
crates/vex-runtime/: Cargo.toml  README.md
crates/vex-runtime/profiles/: fortress_agent.mp  standard_agent.mp
crates/vex-runtime/src/: executor.rs  gate.rs  lib.rs  orchestrator.rs
crates/vex-runtime/src/audit/: mod.rs  vep.rs  (+1 more)
crates/vex-runtime/tests/: bench_titan_scale.rs  consolidation_integration_test.rs  governed_retest.rs  integration_orchestrator.rs  shadow_intent_e2e.rs  titan_gate_verification.rs  vep_bundling_integration.rs  vep_verification.rs
crates/vex-server/: Cargo.toml
crates/vex-server/src/: main.rs
crates/vex-sidecar/: Cargo.toml  README.md
crates/vex-sidecar/src/: main.rs
crates/vex-temporal/: Cargo.toml  README.md
crates/vex-temporal/benches/: memory_benchmark.rs
crates/vex-temporal/src/: compression.rs  horizon.rs  lib.rs  memory.rs
examples/vex-demo/: Cargo.toml
examples/vex-demo/src/: fraud_detector.rs  gen_audit_cli.rs  interactive.rs  main.rs
parity-test/: Cargo.toml
parity-test/src/: main.rs
(+164 files in other folders)
