[workspace]
resolver = "2"
members = [
    "crates/vex-core",
    "crates/vex-adversarial",
    "crates/vex-temporal",
    "crates/vex-llm",
    "crates/vex-runtime",
    "crates/vex-persist",
    "crates/vex-api",
    "crates/vex-queue",
    "crates/vex-macros",
    "crates/vex-cli",
    "crates/vex-anchor",
    "examples/vex-demo",
    "crates/vex-router",
    "crates/vex-algoswitch",
    "crates/vex-server",
]

[workspace.package]
version = "0.1.8"
edition = "2021"
license = "Apache-2.0"
authors = ["VEX Protocol Team <team@vexprotocol.org>"]
repository = "https://github.com/provnai/vex"
description = "The trust layer for AI agents - verification, memory, and cryptographic proofs"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography (Merkle trees)
sha2 = "0.10"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
hex = "0.4"
jsonschema = "0.18" # Keeping it conservative

# Security - Secure secret memory handling
zeroize = { version = "1.8", features = ["derive"] }
curve25519-dalek = "4.1"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

# Internal VEX crates
vex-core = { path = "crates/vex-core", version = "0.1.8" }
vex-adversarial = { path = "crates/vex-adversarial", version = "0.1.8" }
vex-llm = { path = "crates/vex-llm", version = "0.1.8" }
vex-persist = { path = "crates/vex-persist", version = "0.1.8" }
vex-router = { path = "crates/vex-router", version = "0.1.8" }
vex-algoswitch = { path = "crates/vex-algoswitch", version = "0.1.8" }
vex-queue = { path = "crates/vex-queue", version = "0.1.8" }
vex-runtime = { path = "crates/vex-runtime", version = "0.1.8" }
vex-macros = { path = "crates/vex-macros", version = "0.1.8" }
vex-api = { path = "crates/vex-api", version = "0.1.8" }
vex-anchor = { path = "crates/vex-anchor", version = "0.1.8" }
vex-temporal = { path = "crates/vex-temporal", version = "0.1.8" }
vex-server = { path = "crates/vex-server", version = "0.1.8" }
vex-protocol-cli = { path = "crates/vex-cli", version = "0.1.8" }

# Release profile with security-hardened settings
[profile.release]
# Enable overflow checks even in release builds to prevent integer overflow vulnerabilities
overflow-checks = true
# Enable debug assertions in release for additional safety (optional, slight perf impact)
# debug-assertions = false
# Strip symbols for smaller binary and reduced info leakage
strip = "symbols"
# Link-time optimization for better security analysis
lto = "thin"
