[workspace]
resolver = "2"
members = [
    "crates/vex-core",
    "crates/vex-adversarial",
    "crates/vex-temporal",
    "crates/vex-llm",
    "crates/vex-runtime",
    "crates/vex-persist",
    "crates/vex-api",
    "crates/vex-queue",
    "crates/vex-macros",
    "crates/vex-cli",
    "crates/vex-anchor",
    "examples/vex-demo",
    "crates/vex-router",
    "crates/vex-algoswitch",
    "crates/vex-server",
    "crates/vex-hardware",
    "crates/vex-chora",
    "crates/vex-sidecar",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
authors = ["VEX protocol Provnai <contact@provnai.com>"]
repository = "https://github.com/provnai/vex"
description = "The trust layer for AI agents - verification, memory, and cryptographic proofs"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
axum = "0.7"
hyper = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.1.0"

# Cryptography (Merkle trees)
sha2 = "0.10"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
hex = "0.4"
jsonschema = "0.18" # Keeping it conservative

# Security - Secure secret memory handling
zeroize = { version = "1.8", features = ["derive"] }
curve25519-dalek = "4.1"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

# Performance - Zero-copy binary parsing
zerocopy = { version = "0.8", features = ["derive"] }

# Internal VEX crates
vex-core = { path = "crates/vex-core", version = "1.0.0" }
vex-adversarial = { path = "crates/vex-adversarial", version = "1.0.0" }
vex-llm = { path = "crates/vex-llm", version = "1.0.0" }
vex-persist = { path = "crates/vex-persist", version = "1.0.0" }
vex-router = { path = "crates/vex-router", version = "1.0.0" }
vex-algoswitch = { path = "crates/vex-algoswitch", version = "1.0.0" }
vex-queue = { path = "crates/vex-queue", version = "1.0.0" }
vex-runtime = { path = "crates/vex-runtime", version = "1.0.0" }
vex-macros = { path = "crates/vex-macros", version = "1.0.0" }
vex-api = { path = "crates/vex-api", version = "1.0.0" }
vex-anchor = { path = "crates/vex-anchor", version = "1.0.0" }
vex-temporal = { path = "crates/vex-temporal", version = "1.0.0" }
vex-server = { path = "crates/vex-server", version = "1.0.0" }
vex-hardware = { path = "crates/vex-hardware", version = "1.0.0" }
vex-chora = { path = "crates/vex-chora", version = "1.0.0" }
vex-protocol-cli = { path = "crates/vex-cli", version = "1.0.0" }

# Release profile with security-hardened settings
[profile.release]
# Enable overflow checks even in release builds to prevent integer overflow vulnerabilities
overflow-checks = true
# Enable debug assertions in release for additional safety (optional, slight perf impact)
# debug-assertions = false
# Strip symbols for smaller binary and reduced info leakage
strip = "symbols"
# Link-time optimization for better security analysis
lto = "thin"
