[package]
name = "parity-test"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
vex-core = { path = "../crates/vex-core" }
attest-rs = { path = "../../attest/attest-rs" }
tokio = { version = "1.0", features = ["full"] }
snow = "0.9"
serde_json = "1.0"
hex = "0.4.3"
chrono = { version = "0.4", features = ["serde"] }
