[package]
name = "vex-adversarial"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Adversarial (Red/Blue) agent pairing for VEX"
readme = "README.md"
keywords = ["ai", "agents", "adversarial", "red-team", "security"]
categories = ["algorithms", "asynchronous"]

[dependencies]
vex-core = { path = "../vex-core", version = "0.1.0" }
vex-llm = { path = "../vex-llm", version = "0.1.0" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
sha2 = "0.10"
metrics = "0.22"
serde_json = "1.0"
