[package]
name = "vex-adversarial"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Adversarial (Red/Blue) agent pairing for VEX"
readme = "README.md"
keywords = ["ai", "agents", "adversarial", "red-team", "security"]
categories = ["algorithms", "asynchronous"]

[dependencies]
vex-core = { workspace = true }
vex-llm = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
sha2 = "0.10"
metrics = "0.24"
serde_json = "1.0"
