[package]
name = "vex-algoswitch"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Self-optimizing algorithm selection runtime with smart pattern detection"
authors.workspace = true
readme = "README.md"

[dependencies]
once_cell = "1.19"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "benches"
harness = false

[[bench]]
name = "cache"
harness = false

[[bench]]
name = "pattern"
harness = false

[[bench]]
name = "sort"
harness = false
