[package]
name = "vex-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Industry-grade HTTP API gateway for VEX Protocol"
readme = "README.md"
keywords = ["ai", "agents", "api", "http", "gateway"]
categories = ["web-programming::http-server", "asynchronous"]

[dependencies]
# Core VEX crates
vex-core = { path = "../vex-core", version = "0.1.0" }
vex-adversarial = { path = "../vex-adversarial", version = "0.1.0" }
vex-llm = { path = "../vex-llm", version = "0.1.0" }
vex-persist = { path = "../vex-persist", version = "0.1.0" }
vex-queue = { path = "../vex-queue", version = "0.1.0" }
vex-runtime = { path = "../vex-runtime", version = "0.1.0" }

# Async runtime & web framework
tokio = { workspace = true }
async-trait = { workspace = true }
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "limit", "compression-gzip"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Observability (OpenTelemetry-ready)
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Security
jsonwebtoken = "9"
argon2 = "0.5"
base64 = "0.22"
zeroize = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
http-body-util = "0.1"

