[package]
name = "vex-chora"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native bridge to the external CHORA witness network"

[dependencies]
vex-core = { workspace = true }
vex-hardware = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_jcs = "0.1"
hex.workspace = true
chrono.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
sha2.workspace = true
uuid.workspace = true
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
base64.workspace = true
