[package]
name = "vex-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for VEX - verified AI agent tooling"
readme = "README.md"
keywords = ["ai", "agents", "cli", "verification", "tooling"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "vex"
path = "src/main.rs"

[dependencies]
# VEX crates
vex-core = { workspace = true }
vex-llm = { workspace = true }
vex-persist = { workspace = true }

# Async runtime
tokio = { workspace = true }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }

# CLI
clap = { version = "4", features = ["derive", "env", "color"] }

# Error handling
anyhow = { workspace = true }

# Serialization
serde_json = { workspace = true }

# Terminal output
colored = "2"
comfy-table = "7"

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
