[package]
name = "vex-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types for VEX: Agent, ContextPacket, MerkleNode, Evolution"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "merkle_benchmark"
harness = false

[[bench]]
name = "agent_benchmark"
harness = false
