[package]
name = "vex-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types for VEX: Agent, ContextPacket, MerkleNode, Evolution"
readme = "README.md"
keywords = ["ai", "agents", "merkle", "verification", "llm"]
categories = ["cryptography", "asynchronous"]

[features]
default = []
evolution-memory = []
algoswitch = ["dep:vex-algoswitch"]

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_jcs = "0.1.0"
sha2 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
metrics = "0.22"
hex = { workspace = true }
rayon = "1.10"
ed25519-dalek = { workspace = true }
vex-algoswitch = { workspace = true, optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "merkle_benchmark"
harness = false

[[bench]]
name = "agent_benchmark"
harness = false

