[package]
name = "vex-hardware"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
hex = "0.4"
async-trait = "0.1"

ed25519-dalek = { version = "2.1", features = ["rand_core", "pem", "pkcs8"] }
aes-gcm = "0.10"
rand = "0.8"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "2.0.18"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }

[target.'cfg(target_os = "linux")'.dependencies]
tss-esapi = "7.5.0"
