[package]
name = "vex-hardware"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hardware-rooted identity for AI agents (TPM/CNG)"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
hex = "0.4"
async-trait = "0.1"

# Cryptography & Security
ed25519-dalek = { version = "2.1", features = ["rand_core", "pem", "pkcs8"] }
sha2 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
aes-gcm = "0.10"
rand = "0.8"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
provn-sdk = "0.3.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Security_Cryptography", "Win32_System_Threading", "Win32_Foundation"] }
windows = { version = "0.62.2", features = ["Win32_Security_Tpm", "Win32_Foundation", "Win32_System_SystemServices", "Win32_Security_Cryptography", "Win32_System_TpmBaseServices"] }

[target.'cfg(target_os = "linux")'.dependencies]
tss-esapi = "7.5.0"
