[package]
name = "vex-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "LLM provider integrations for VEX"
readme = "README.md"
keywords = ["ai", "llm", "openai", "ollama", "agents"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
vex-core = { path = "../vex-core", version = "0.1.0" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }

[features]
default = []
openai = ["dep:async-openai"]

[dependencies.async-openai]
version = "0.31"
optional = true
