[package]
name = "vex-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for the VEX protocol"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.20" # For easy attribute parsing
