[package]
name = "vex-persist"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Persistence layer for VEX Protocol"
readme = "README.md"
keywords = ["ai", "agents", "persistence", "sqlite", "database"]
categories = ["database", "asynchronous"]

[dependencies]
vex-core = { workspace = true }
vex-queue = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = "0.10"
rand = "0.9"
hex = "0.4"
argon2 = "0.5"
subtle = "2.5"
# Ed25519 signature verification (ISO 42001 A.6.1.3)
ed25519-dalek = { workspace = true }

# Optional database backends (default-features = false to exclude MySQL and fix RUSTSEC-2023-0071)
# Note: macros feature currently pulls in MySQL support - this is a known limitation of sqlx
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "chrono", "json", "migrate", "macros"], optional = true }

[features]
default = ["sqlite"]
sqlite = ["sqlx"]
postgres = ["sqlx"]
