[package]
name = "vex-persist"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Persistence layer for VEX Protocol"
readme = "README.md"
keywords = ["ai", "agents", "persistence", "sqlite", "postgres"]
categories = ["database", "asynchronous"]

[dependencies]
vex-core = { workspace = true }
vex-queue = { workspace = true }
vex-hardware = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
argon2 = "0.5"
subtle = "2.5"
# Ed25519 signature verification (ISO 42001 A.6.1.3)
ed25519-dalek = { workspace = true }
utoipa = { version = "5", features = ["chrono", "uuid"] }

# Optional database backends
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "chrono", "json", "migrate", "macros"], optional = true }
# pgvector extension for native PostgreSQL vector similarity search
pgvector = { version = "0.4", features = ["sqlx"], optional = true }

[features]
default = ["sqlite"]
sqlite = ["sqlx"]
postgres = ["sqlx", "pgvector"]
