[package]
name = "vex-queue"
version = "0.1.0"
edition = "2021"
description = "Async background worker queue for VEX Protocol"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
